--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
 PORT=5001
-MONGODB_URI=mongodb+srv://steja:Saiteja%40108@cluster0.yuukewp.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGODB_URI= mongodb+srv://steja:saiteja108@cluster0.dz48p.mongodb.net/
 JWT_SECRET=WbBehNuuak
